syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.atlas.framework.grpc.protobuf.user";

import "google/protobuf/empty.proto";
import "common.proto";

package user;

service UserAuthService {
  rpc GetUserAuth (GetUserAuthRequestProto) returns (UserAuthProto) {};
}

service CustomerService {
  rpc ListCustomer (ListCustomerRequestProto) returns (CustomerListProto) {};
}

message GetUserAuthRequestProto {
  string email = 1;
}

message UserAuthProto {
  int32 id = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message ListCustomerRequestProto {
  repeated int32 id = 1;
}

message CustomerListProto {
  repeated common.CustomerProto customer = 1;
}
